# semblnyce

./: .replit  analytics.json  contacts.json  main.py  pyproject.toml  requirements.txt  view_count.json
attached_assets/: Pasted--They-say-New-York-City-is-the-city-of-dreams-Well-I-think-that-s-bull-While-half-of-our-t-1754093966214_1754093966216.txt
static/: style.css
templates/: about.html  admin.html  admin_contacts.html  admin_dashboard.html  admin_orders.html  base.html  cart.html  checkout.html  contact.html  designer.html  donate.html  home.html  product.html  shop.html  success.html
