[project]
name = "semblnyce-streetwear"
version = "0.2.0"
description = "Street fashion platform supporting homeless artistsw"
authors = ["Semblnyce Team <semblnyce@gmail.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-mail>=0.9.1",
    "stripe>=12.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
]
